<resources>
    <string name="app_name">Contacts List</string>
    <string name="add">Insert</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="col_first_name">First Name</string>
    <string name="col_last_name">Last Name</string>
    <string name="col_email">Email Address</string>
    <string name="col_phone">Phone Number</string>
    <string name="col_update">Update</string>
    <string name="btn_update">Update</string>
    <string name="btn_back">Back</string>
    <string name="btn_insert">Insert</string>
    <string name="hint_first_name">Enter First Name</string>
    <string name="hint_last_name">Enter Last Name</string>
    <string name="hint_email">Enter Email Address</string>
    <string name="hint_phone">Enter Phone Number</string>
</resources>