<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_insert">

    <EditText
        android:id="@+id/input_first"
        android:layout_marginTop="@dimen/insert_top_margin"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_first_name"/>

    <EditText
        android:id="@+id/input_last"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/input_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_last_name"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_below="@id/input_last"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"/>

    <EditText
        android:id="@+id/input_number"
        android:layout_below="@id/input_email"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"/>

    <Button
        android:id="@+id/insert_button"
        android:layout_below="@id/input_number"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="insertData"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/insert_bottom_margin"
        android:onClick="goBack"/>

</RelativeLayout>
